deleted jquery3.2.1 and updated to 3.4.1versio, optimised best practice & accessibility of website with aria-label

--- a/404.html
+++ b/404.html
@@ -124,53 +124,50 @@
     </section>
     <!-- end s-home -->
 
-    <!-- footer
+   <!-- footer
     ================================================== -->
     <footer>
       <div class="row">
-        <div class="col-full">
-          <div class="footer-logo">
-            <a class="footer-site-logo" href="https://jeremychan.co"
-              ><img src="../images/logo.png" alt="Homepage"
-            /></a>
-          </div>
+          <div class="col-full">
 
-          <ul class="footer-social">
-            <li>
-              <a href="http://www.linkedin.com/in/jeremycte">
-                <i class="im im-linkedin" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li>
-              <a href="http://www.facebook.com/jeremycte23">
-                <i class="im im-facebook" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li>
-              <a href="http://instagram.com/ctecreatives">
-                <i class="im im-instagram" aria-hidden="true"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
+              <!-- <div class="footer-logo">
+                  <a class="footer-site-logo" href="#0"><img src="images/logo.png" alt="Homepage"></a>
+              </div> -->
+
+              <ul class="footer-social">
+                  <li><a href="http://www.linkedin.com/in/jeremycte" target="_blank" aria-label="visit my LinkedIn profile" rel="noopener" name="LinkedIn">
+                          <i class="im im-linkedin" aria-label="visit my LinkedIn profile"></i>
+                          <!-- <span>LinkedIn</span> -->
+                      </a></li>
+                  <li><a href="http://www.facebook.com/jeremycte23" target="_blank" aria-label="visit my Facebook profile" rel="noopener" name="Facebook">
+                          <i class="im im-facebook" aria-label="visit my Facebook profile"></i>
+                          <!-- <span>Facebook</span> -->
+                      </a></li>
+                  <li><a href="http://instagram.com/ctecreatives" target="_blank" aria-label="visit my Instagram profile" rel="noopener" name="Instagram">
+                          <i class="im im-instagram" aria-label="visit my Instagram page"></i>
+                          <!-- <span>Instagram</span> -->
+                      </a></li>
+              </ul>
+
+          </div>
       </div>
 
       <div class="row footer-bottom">
-        <div class="col-twelve">
-          <div class="copyright">
-            <span>© COPYRIGHT 2019 JEREMY CHAN</span>
+
+          <div class="col-twelve">
+              <div class="copyright">
+                  <span>© COPYRIGHT 2019 JEREMY CHAN</span>
+              </div>
+
+              <div class="go-top">
+                  <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up"
+                          aria-hidden="true"></i></a>
+              </div>
           </div>
 
-          <div class="go-top">
-            <a class="smoothscroll" title="Back to Top" href="#top"
-              ><i class="im im-arrow-up" aria-hidden="true"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-      <!-- end footer-bottom -->
-    </footer>
-    <!-- end footer -->
+      </div> <!-- end footer-bottom -->
+
+  </footer> <!-- end footer -->
 
     <!-- <div id="preloader">
       <div id="loader"></div>
@@ -178,7 +175,7 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="../js/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../js/plugins.js"></script>
     <script src="../js/main.js"></script>
   </body>
