added thumbnail, optimised images and input better SEO alt text

--- a/index.html
+++ b/index.html
@@ -491,9 +491,9 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-gwen.jpg" class="thumb-link" title="Gwen's 1st"
                                 data-size="1050x700">
-                                <img src="images/portfolio/gallery/g-gwen.jpg"
-                                    srcset="images/portfolio/gallery/g-gwen.jpg 1x, images/portfolio/gallery/g-gwen.jpg 2x"
-                                    alt="Gwens1st Birthday">
+                                <img src="images/portfolio/gallery/g-gwen_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-gwen_tn.jpg 1x, images/portfolio/gallery/g-gwen_tn.jpg 2x"
+                                    alt="Gwens 1st Birthday Card image">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -519,9 +519,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-samantha.jpg" class="thumb-link"
-                                title="Christian & Samantha" data-size="4000x6000">
-                                <img src="images/portfolio/gallery/g-samantha.jpg"
-                                    srcset="images/portfolio/gallery/g-samantha.jpg 1x, images/portfolio/gallery/g-samantha.jpg 2x"
+                                title="Christian & Samantha" data-size="2000x3000">
+                                <img src="images/portfolio/gallery/g-samantha_tn.jpg"
                                     alt="Christian & Samantha">
                                 <span class="shadow-overlay"></span>
                             </a>
@@ -549,9 +548,9 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-qingyi.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/gallery/g-qingyi.jpg"
-                                    srcset="images/portfolio/gallery/g-qingyi.jpg 1x, images/portfolio/gallery/g-qingyi.jpg 2x"
-                                    alt="Qing Yi Birthday">
+                                <img src="images/portfolio/gallery/g-qingyi_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-qingyi_tn.jpg 1x, images/portfolio/gallery/g-qingyi_tn.jpg 2x"
+                                    alt="Qing Yi Birthday Smilling">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -577,8 +576,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-jerald.jpg" class="thumb-link" data-size="3900x5900">
-                                <img src="images/portfolio/gallery/g-jerald.jpg"
-                                    srcset="images/portfolio/gallery/g-jerald.jpg 1x, images/portfolio/gallery/g-jerald.jpg 2x"
+                                <img src="images/portfolio/gallery/g-jerald_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-jerald_tn.jpg 1x, images/portfolio/gallery/g-jerald_tn.jpg 2x"
                                     alt="Jerald Portraiture">
                                 <span class="shadow-overlay"></span>
                             </a>
@@ -606,8 +605,8 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-nightfestival2.jpg" class="thumb-link"
                                 data-size="3600x5400">
-                                <img src="images/portfolio/gallery/g-nightfestival2.jpg"
-                                    srcset="images/portfolio/gallery/g-nightfestival2.jpg 1x, images/portfolio/gallery/g-nightfestival2.jpg 2x"
+                                <img src="images/portfolio/gallery/g-nightfestival2_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-nightfestival2_tn.jpg 1x, images/portfolio/gallery/g-nightfestival2_tn.jpg 2x"
                                     alt="Night Festival">
                                 <span class="shadow-overlay"></span>
                             </a>
@@ -635,8 +634,8 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-nightfestival.jpg" class="thumb-link"
                                 data-size="1050x700">
-                                <img src="images/portfolio/gallery/g-nightfestival.jpg"
-                                    srcset="images/portfolio/gallery/g-nightfestival.jpg 1x, images/portfolio/gallery/g-nightfestival.jpg 2x"
+                                <img src="images/portfolio/gallery/g-nightfestival_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-nightfestival_tn.jpg 1x, images/portfolio/gallery/g-nightfestival_tn.jpg 2x"
                                     alt="Night festival">
                                 <span class="shadow-overlay"></span>
                             </a>
@@ -664,8 +663,8 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-passageintime.jpg" class="thumb-link"
                                 data-size="2976x3720">
-                                <img src="images/portfolio/gallery/g-passageintime.jpg"
-                                    srcset="images/portfolio/gallery/g-passageintime.jpg 1x, images/portfolio/gallery/g-passageintime.jpg 2x"
+                                <img src="images/portfolio/gallery/g-passageintime_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-passageintime_tn.jpg 1x, images/portfolio/gallery/g-passageintime_tn.jpg 2x"
                                     alt="Passage in Time">
                                 <span class="shadow-overlay"></span>
                             </a>
@@ -693,9 +692,9 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-valen.jpg" class="thumb-link" data-size="1280x853">
-                                <img src="images/portfolio/gallery/g-valen.jpg"
-                                    srcset="images/portfolio/gallery/g-valen.jpg 1x, images/portfolio/gallery/g-valen.jpg 2x"
-                                    alt="Valen">
+                                <img src="images/portfolio/gallery/g-valen_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-valen_tn.jpg 1x, images/portfolio/gallery/g-valen_tn.jpg 2x"
+                                    alt="Valen swimming and laughing">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -720,10 +719,10 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-redbridge.jpg" class="thumb-link" data-size="5749x4000">
-                                <img src="images/portfolio/gallery/g-redbridge.jpg"
-                                    srcset="images/portfolio/gallery/g-redbridge.jpg 1x, images/portfolio/gallery/g-redbridge.jpg 2x"
-                                    alt="Red Bridge">
+                            <a href="images/portfolio/gallery/g-redbridge.jpg" class="thumb-link" data-size="3000x2000">
+                                <img src="images/portfolio/gallery/g-redbridge_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-redbridge_tn.jpg 1x, images/portfolio/gallery/g-redbridge_tn.jpg 2x"
+                                    alt="3 Friends on a Red Bridge">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -749,9 +748,9 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-studio.jpg" class="thumb-link" data-size="4000x6000">
-                                <img src="images/portfolio/gallery/g-studio.jpg"
-                                    srcset="images/portfolio/gallery/g-studio.jpg 1x, images/portfolio/gallery/g-studio.jpg 2x"
-                                    alt="Studio Shoot">
+                                <img src="images/portfolio/gallery/g-studio_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-studio_tn.jpg 1x, images/portfolio/gallery/g-studio_tn.jpg 2x"
+                                    alt="Studio Shoot of a women">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -778,9 +777,9 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-sheena.jpg" class="thumb-link" data-size="6000x4000">
-                                <img src="images/portfolio/gallery/g-sheena.jpg"
-                                    srcset="images/portfolio/gallery/g-sheena.jpg 1x, images/portfolio/gallery/g-sheena.jpg 2x"
-                                    alt="Sheena's Bday">
+                                <img src="images/portfolio/gallery/g-sheena_tn.jpg"
+                                    srcset="images/portfolio/gallery/g-sheena_tn.jpg 1x, images/portfolio/gallery/g-sheena_tn.jpg 2x"
+                                    alt="Sheena's Birthday Party">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -833,9 +832,9 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/projects/p-ValitPoster.jpg" class="thumb-link"
                                 title="Valit Poster" data-size="7000x9900">
-                                <img src="images/portfolio/projects/p-ValitPoster.jpg"
-                                    srcset="images/portfolio/projects/p-ValitPoster.jpg 1x, images/portfolio/projects/p-ValitPoster.jpg 2x"
-                                    alt="Valit Project">
+                                <img src="images/portfolio/projects/p-ValitPoster_tn.jpg"
+                                    srcset="images/portfolio/projects/p-ValitPoster_tn.jpg 1x, images/portfolio/projects/p-ValitPoster_tn.jpg 2x"
+                                    alt="Valit Blockchain Project">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -867,9 +866,9 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/projects/p-sip.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/projects/p-sip.jpg"
-                                    srcset="images/portfolio/projects/p-sip.jpg 1x, images/portfolio/projects/p-sip.jpg 2x"
-                                    alt="Social Innovation Project">
+                                <img src="images/portfolio/projects/p-sip_tn.jpg"
+                                    srcset="images/portfolio/projects/p-sip_tn.jpg 1x, images/portfolio/projects/p-sip_tn.jpg 2x"
+                                    alt="Social Innovation Project Mindfulness">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -904,7 +903,7 @@
                             <a href="images/portfolio/projects/p-AppDev.png" class="thumb-link" data-size="1050x700">
                                 <img src="images/portfolio/projects/p-AppDev.png"
                                     srcset="images/portfolio/projects/p-AppDev.png 1x, images/portfolio/projects/p-AppDev.png 2x"
-                                    alt="Application Development">
+                                    alt="Application Development C#">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -931,9 +930,9 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/projects/p-Foodify.jpg" class="thumb-link" data-size="1920x1080">
-                                <img src="images/portfolio/projects/p-Foodify.jpg"
-                                    srcset="images/portfolio/projects/p-Foodify.jpg 1x, images/portfolio/projects/p-Foodify.jpg 2x"
-                                    alt="Foodify">
+                                <img src="images/portfolio/projects/p-Foodify_tn.jpg"
+                                    srcset="images/portfolio/projects/p-Foodify_tn.jpg 1x, images/portfolio/projects/p-Foodify_tn.jpg 2x"
+                                    alt="Foodify User Interface Design">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -965,9 +964,9 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/projects/p-BI.png" class="thumb-link" data-size="1920x1080">
-                                <img src="images/portfolio/projects/p-BI.png"
-                                    srcset="images/portfolio/projects/p-BI.png 1x, images/portfolio/projects/p-BI.png 2x"
-                                    alt="Business Intelligence">
+                                <img src="images/portfolio/projects/p-BI_tn.png"
+                                    srcset="images/portfolio/projects/p-BI_tn.png 1x, images/portfolio/projects/p-BI_tn.png 2x"
+                                    alt="Business Intelligence Sales Analysis">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
