changed from learning-git to application-dev and changed home link to https://jeremychan.co

--- a/404.html
+++ b/404.html
@@ -72,7 +72,7 @@
     ================================================== -->
     <header class="s-header">
       <div class="header-logo">
-        <a class="site-logo" href="../index.html"
+        <a class="site-logo" href="https://jeremychan.co/"
           ><img src="../images/logo.png" alt="Homepage"
         /></a>
       </div>
@@ -85,7 +85,7 @@
           <li>
             <a href="../index.html#project" title="project">Projects</a>
           </li>
-          <li class="current"><a href="blog.html" title="blog">Blog</a></li>
+          <li class="current"><a href="./blog/blog.html" title="blog">Blog</a></li>
           <li><a href="../index.html#contact" title="contact">Contact</a></li>
         </ul>
       </nav>
