--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Jeremy Chan Hero Image"></a>
+            <a class="site-logo" href="https://jeremychan.co"><img src="images/logo.png" alt="Jeremy Chan Hero Image"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -1029,6 +1029,40 @@
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
 
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/projects/p-DEUI.jpg" class="thumb-link" data-size="1920x1080">
+                                <img src="images/portfolio/projects/p-DEUI.jpg"
+                                    srcset="images/portfolio/projects/p-DEUI.jpg 1x, images/portfolio/projects/p-DEUI.jpg 2x"
+                                    alt="Jeremy Chan Tse Ee Portfolio Website">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                My Portfolio
+                            </h3>
+                            <p class="item-folio__cat">
+                                Personal Website Project
+                            </p>
+                        </div>
+
+                        <span class="item-folio__caption">
+                            <p>
+                                A personal project to design and code a simple yet elegant, single page porfolio website.
+                                A personal project in building and maintaining my very own website using HTML, CSS, JS and PHP. This project took a total of 1.5 months.
+                                A website revamp from version one which I used a template builder
+                                Adobe Portfolio to create and host my website. Check out my previous website
+                                <a target="_Blank" rel="noopener" href="https://jeremychan.myportfolio.com">jeremychan.myportfolio.com</a>
+                            </p>
+                        </span>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
             </div>
         </div> <!-- end masonry -->
 
@@ -1059,16 +1093,14 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="./blog/learning-git.html">Oct 22, 2019</a>
+                            <a href="./blog/application-dev.html">Oct 22, 2019</a>
                         </div>
-                        <h2 class="h01"><a href="./blog/learning-git.html">Learning Git as a beginner</a></h2>
+                        <h2 class="h01"><a href="./blog/application-dev.html">C# Application Development</a></h2>
                         <p>
-                            Interested in learning Git? Never done it before?
-                            Confused by your lecturers teaching/explaination?
-                            Trust me, I've been in the same situation as you and it's ok to be confused,
-                            scared and annoyed about Git. Git is tough if you don't know anything about it or what is it
-                            about.
-                            A simple way of explaining Git is...
+                            It was the beginning of February 2018 reaching the end of my Semester 2,
+                            with only 5 days left before our submission for our C# Application Development,
+                            my partner, Javier and I started working on our C# Windows Presentation Format Application.
+                            With just tutorials and practical given by our lecturer, both of us didn't know how to code ...
                         </p>
 
                         <div class="blog-cat">
