add in my portfolio project img

--- a/index.html
+++ b/index.html
@@ -1033,9 +1033,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/projects/p-DEUI.jpg" class="thumb-link" data-size="1920x1080">
-                                <img src="images/portfolio/projects/p-DEUI.jpg"
-                                    srcset="images/portfolio/projects/p-DEUI.jpg 1x, images/portfolio/projects/p-DEUI.jpg 2x"
+                            <a href="images/portfolio/projects/p-Portfolio1.PNG" class="thumb-link" data-size="1920x1080">
+                                <img src="images/portfolio/projects/p-Portfolio1.PNG"
+                                    srcset="images/portfolio/projects/p-Portfolio1.PNG 1x, images/portfolio/projects/p-Portfolio1.PNG 2x"
                                     alt="Jeremy Chan Tse Ee Portfolio Website">
                                 <span class="shadow-overlay"></span>
                             </a>
