--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         </div>
                         <div class="timeline__desc">
                             <p>As a Digital Technology Intern, I work and help on the Lexus International Brand as a
-                                client. Primarily focusing on content population, quality-check and a mixture of
+                                client. Primarily focusing on content population, website quality assurance, analytics tagging and a mixture of
                                 front-end/back-end coding.</p>
                         </div>
                     </div> <!-- end timeline__block -->
@@ -1033,9 +1033,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/projects/p-Portfolio1.PNG" class="thumb-link" data-size="1920x1080">
-                                <img src="images/portfolio/projects/p-Portfolio1.PNG"
-                                    srcset="images/portfolio/projects/p-Portfolio1.PNG 1x, images/portfolio/projects/p-Portfolio1.PNG 2x"
+                            <a href="images/portfolio/projects/p-Portfolio.png" class="thumb-link" data-size="1900x930">
+                                <img src="images/portfolio/projects/p-Portfolio_tn.png"
+                                    srcset="images/portfolio/projects/p-Portfolio_tn.png 1x, images/portfolio/projects/p-Portfolio_tn.png 2x"
                                     alt="Jeremy Chan Tse Ee Portfolio Website">
                                 <span class="shadow-overlay"></span>
                             </a>
@@ -1053,8 +1053,8 @@
                         <span class="item-folio__caption">
                             <p>
                                 A personal project to design and code a simple yet elegant, single page porfolio website.
-                                A personal project in building and maintaining my very own website using HTML, CSS, JS and PHP. This project took a total of 1.5 months.
-                                A website revamp from version one which I used a template builder
+                                This project took a total of 1.5 months and the goal was to build and maintain my very own website using HTML, CSS, JS and PHP.
+                                This newly designed website is a revamp from my previous website version one which I used a template builder
                                 Adobe Portfolio to create and host my website. Check out my previous website
                                 <a target="_Blank" rel="noopener" href="https://jeremychan.myportfolio.com">jeremychan.myportfolio.com</a>
                             </p>
