added in hotjar scroll map code

--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
         ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
+
+    <!-- Hotjar Tracking Code for www.jeremychan.co
+    ================================================== -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:1608192,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 </head>
 
 <body id="top">
@@ -282,7 +295,7 @@
                             <h5>Digital Technology Intern</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>As a Digital Technology Intern, I work and help on the Lexus International Brand & Marina Bay Sands as a
+                            <p>As a Digital Technology Intern, I work and help on the Lexus International Brand as a
                                 client. Primarily focusing on content population, website quality assurance, analytics tagging and a mixture of
                                 front-end/back-end coding.</p>
                         </div>
@@ -1055,7 +1068,8 @@
                                 A personal project to design and code a simple yet elegant, single page porfolio website.
                                 This project took a total of 1.5 months and the goal was to build and maintain my very own website using HTML, CSS, JS and PHP.
                                 This newly designed website is a revamp from my previous website version one which I used a template builder
-                                Adobe Portfolio to create and host my website.
+                                Adobe Portfolio to create and host my website. Check out my previous website
+                                <a target="_Blank" rel="noopener" href="https://jeremychan.myportfolio.com">jeremychan.myportfolio.com</a>
                             </p>
                         </span>
 
