--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <h5>Digital Technology Intern</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>As a Digital Technology Intern, I work and help on the Lexus International Brand as a
+                            <p>As a Digital Technology Intern, I work and help on the Lexus International Brand & Marina Bay Sands as a
                                 client. Primarily focusing on content population, website quality assurance, analytics tagging and a mixture of
                                 front-end/back-end coding.</p>
                         </div>
@@ -1068,8 +1068,7 @@
                                 A personal project to design and code a simple yet elegant, single page porfolio website.
                                 This project took a total of 1.5 months and the goal was to build and maintain my very own website using HTML, CSS, JS and PHP.
                                 This newly designed website is a revamp from my previous website version one which I used a template builder
-                                Adobe Portfolio to create and host my website. Check out my previous website
-                                <a target="_Blank" rel="noopener" href="https://jeremychan.myportfolio.com">jeremychan.myportfolio.com</a>
+                                Adobe Portfolio to create and host my website.
                             </p>
                         </span>
 
