changed references p color

--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
                     Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
                     <div class="testimonials__author h06">
                         Sundar Pichai
-                        <span>Name in Field</span>
+                        <span>Technology Director for Convertium Pte Ltd</span>
                     </div>
                 </div>
 
