--- a/index.html
+++ b/index.html
@@ -1098,17 +1098,18 @@
             <div class="col-full testimonials__slider">
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum.
-                    Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
+                    <img src="http://placehold.it/150x150" alt="Author image" class="testimonials__avatar">
+                    <p>Tse Ee is a student who is full of energy and enthusiasm.
+                        Despite the challenges and high academic stresses of the course he is undertaking,
+                        he is always polite, positive, and keeps a strong passion for what he wants in life.</p>
                     <div class="testimonials__author h06">
-                        Tim Cook
+                        Boh Cheh Wee
                         <span>Singapore Polytechnic Lecturer</span>
                     </div>
                 </div>
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
+                    <img src="http://placehold.it/150x150" alt="Author image" class="testimonials__avatar">
                     <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
                     Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
                     <div class="testimonials__author h06">
