solved 404.html error of subfolder detection

--- a/404.html
+++ b/404.html
@@ -39,19 +39,19 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="../css/base.css" />
-    <link rel="stylesheet" href="../css/vendor.css" />
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="https://jeremychan.co/css/base.css" />
+    <link rel="stylesheet" href="https://jeremychan.co/css/vendor.css" />
+    <link rel="stylesheet" href="https://jeremychan.co/css/main.css" />
 
     <!-- script
     ================================================== -->
-    <script src="../js/modernizr.js"></script>
-    <script src="../js/pace.min.js"></script>
+    <script src="https://jeremychan.co/js/modernizr.js"></script>
+    <script src="https://jeremychan.co/js/pace.min.js"></script>
 
     <!-- favicons
     ================================================== -->
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://jeremychan.co/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="https://jeremychan.co/favicon.ico" type="image/x-icon" />
 
     <!-- Google Analytics
     ================================================== -->
@@ -73,20 +73,20 @@
     <header class="s-header">
       <div class="header-logo">
         <a class="site-logo" href="https://jeremychan.co/"
-          ><img src="../images/logo.png" alt="Homepage"
+          ><img src="https://jeremychan.co/images/logo.png" alt="Homepage"
         /></a>
       </div>
 
       <nav class="header-nav-wrap">
         <ul class="header-nav">
-          <li><a href="../index.html#home" title="home">Home</a></li>
-          <li><a href="../index.html#about" title="about">About</a></li>
-          <li><a href="../index.html#works" title="works">Works</a></li>
+          <li><a href="https://jeremychan.co/#home" title="home">Home</a></li>
+          <li><a href="https://jeremychan.co/#about" title="about">About</a></li>
+          <li><a href="https://jeremychan.co/#works" title="works">Works</a></li>
           <li>
-            <a href="../index.html#project" title="project">Projects</a>
+            <a href="https://jeremychan.co/#project" title="project">Projects</a>
           </li>
-          <li class="current"><a href="./blog/blog.html" title="blog">Blog</a></li>
-          <li><a href="../index.html#contact" title="contact">Contact</a></li>
+          <li class="current"><a href="https://jeremychan.co/blog/blog.html" title="blog">Blog</a></li>
+          <li><a href="https://jeremychan.co/#contact" title="contact">Contact</a></li>
         </ul>
       </nav>
 
@@ -100,7 +100,7 @@
       id="home"
       class="s-home page-hero target-section"
       data-parallax="scroll"
-      data-image-src="../images/DSC8983.jpg"
+      data-image-src="https://jeremychan.co/images/DSC8983.jpg"
       data-natural-width="3000"
       data-natural-height="2000"
       data-position-y="center"
@@ -176,8 +176,8 @@
     <!-- Java Script
     ================================================== -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="../js/plugins.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="https://jeremychan.co/js/plugins.js"></script>
+    <script src="https://jeremychan.co/js/main.js"></script>
     <script>
       var year = new Date().getFullYear();
       var label = "© COPYRIGHT " + year +" JEREMY CHAN";
