--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
 
                 <h1>
                     I am Jeremy Chan. <br>
-                    I am a photographer <br>
-                    & student based in <br>
-                    Singapore.
+                    I am a programmer, <br>
+                    photographer
+                    & student <br>
+                    based in Singapore.
                 </h1>
 
                 <div class="home-content__buttons">
@@ -207,7 +208,7 @@
 
                 <p class="basicinfo"><strong>Age:</strong> 20 <br />
                     <strong>Currently In:</strong> Singapore <br />
-                    <strong>Speak & Read:</strong> English, Chinese and Malay</p>
+                    <strong>Speak & Read:</strong> English, Mandarin and Malay</p>
 
                 <p>I am a self taught photographer and currently living in Singapore.
                     I am available for <strong style="color: #000;">freelance work</strong> (Event Photography) and
@@ -280,7 +281,7 @@
 
         <div class="row about-content about-content--timeline">
 
-            <div class="col-six text-left left">
+            <div class="col-full text-center">
                 <h3>Work Experience</h3>
             </div>
 
@@ -322,7 +323,7 @@
 
         <div class="row about-content about-content--timeline">
 
-            <div class="col-six text-left left">
+            <div class="col-full text-center">
                 <h3>My Education</h3>
             </div>
 
@@ -372,7 +373,7 @@
 
         <div class="row about-content about-content--timeline">
 
-            <div class="col-full text-left">
+            <div class="col-full text-center">
                 <h3>Volunteer Experience</h3>
             </div>
 
