commented Volunteer Experiences

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 
 
-        <div class="row about-content about-content--timeline">
+        <!-- <div class="row about-content about-content--timeline">
 
             <div class="col-full text-center">
                 <h3>Volunteer Experience</h3>
@@ -393,7 +393,7 @@
                                 &#8226; Organised a youth camp of 70 people for 3 days 2 nights <br />
                             </p>
                         </div>
-                    </div> <!-- end timeline__block -->
+                    </div>
 
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
@@ -413,12 +413,12 @@
                                 Thailand
                             </p>
                         </div>
-                    </div> <!-- end timeline__block -->
+                    </div>
 
 
 
-                </div> <!-- end timeline -->
-            </div> <!-- end left -->
+                </div>
+            </div>
 
             <div class="col-six tab-full right">
                 <div class="timeline">
@@ -439,7 +439,7 @@
                                 people around the world attended the conference
                             </p>
                         </div>
-                    </div> <!-- end timeline__block -->
+                    </div>
 
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
@@ -461,12 +461,12 @@
 
                             </p>
                         </div>
-                    </div> <!-- end timeline__block -->
+                    </div>
 
-                </div> <!-- end timeline -->
-            </div> <!-- end right -->
+                </div>
+            </div>
 
-        </div> <!-- end about-content timeline -->
+        </div>  -->
 
     </section> <!-- end about -->
 
